Fix Fix: Train is named correctly & updates payload as expected Fix: Bus now conforms to the 'negenoog' traffic light